cargo-features = ["codegen-backend"]
[package]
name = "flow"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.10"
error-iter = "0.4"
itertools = "0.13.0"
log = "0.4"
pixels = "0.14.0"
winit = { version = "0.29", features = ["rwh_05"]}
winit_input_helper = "0.15"

[profile.dev]
debug = 0
codegen-backend = "cranelift"
